samples/_failures_safe/1761215194_e2e172_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_cb2e5b27.c: In function ‘main’:
./samples/SAFE/__tmp_cb2e5b27.c:144: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_cb2e5b27.c:143:5: error: expected declaration or statement at end of input
  143 |     if
      |     ^~
